# Virgil-StatusPage

./: .gitignore  README.md
.github/: dependabot.yml
backend/: .gitignore  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  run.py
backend/mainapp/: admin.py  middleware.py  models.py  serializers.py  task.py  urls.py  utils.py  views.py
backend/mainapp/migrations/: 0001_initial.py  0002_dailystatus_monthlystatus_weeklystatus_delete_item.py  0004_alter_service_id.py  0006_remove_itemstatus_service_delete_service.py  0007_service_itemstatus_service.py  0008_feature.py  0009_feature_date_alter_feature_image.py
backend/status_page/: db.sqlite3  settings.py  wsgi.py
backend/status_page/mainapp/: admin.py  models.py  serializers.py  task.py  urls.py  utils.py  views.py
backend/status_page/mainapp/migrations/: 0003_itemstatus_service_delete_dailystatus_and_more.py  0005_alter_service_id.py
backend/status_page/mainapp/templates/mainapp/: rolls.html
backend/status_page/status_page/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .browserslistrc  .eslintrc.json  .gitignore  Caddyfile  README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app-routing.module.ts  app.module.ts  app.root.html  app.root.ts  data.service.ts
frontend/src/app/entry-text/: entry-text.component.css  entry-text.component.html  entry-text.component.ts
frontend/src/app/faq/: faq.component.css  faq.component.html  faq.component.ts
frontend/src/app/last-feature/: last-feature.component.css  (+2 more)
(+11 files in other folders)
